--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "workoutmixbuilder",
+  "version": "8.1.0",
   "homepage": "https://stadej.github.io/WorkoutMixBuilder",
   "private": true,
   "dependencies": {
